# latynkatar

./: .envrc  .gitignore  Makefile  README.md  latynkatar.py  noxfile.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-tests.yml  python-package.yml  release-publishing.yml
src/latynkatar/: __init__.py  cyr2lat.py  lat2cyr.py  latynkatar.py  variables.py
tests/: test_halosnyja.py  test_tekst.py  test_zycznyja.py  test_zyćnyja.py
tests/Cyr2Lat/: test_tekst.py  test_zyćnyja.py
tests/Lat2Cyr/: test_zyćnyja.py
tests/data/: novaja_ziamla.txt
