[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latynkatar"
version = "1.2.2"
authors = [
  { name="Andrej Zacharevicz", email="zahar.by@gmail.com" },
]
description = """EN: Simple and small package to convert belarussian cyrillic text to a modern (the one with ž, č, š and v) and classic (the one with ż, cz, sz and w) latin .

BE: Просты і невялікі пакет для канвертацыі беларускай кірыліцы ў сучасную (з ž, č, š і v) і класічную (з ż, cz, sz і w) лацінку."""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/measles/latynkatar"
Issues = "https://github.com/measles/latynkatar/issues"
